--- a/Styles.css
+++ b/Styles.css
@@ -23,3 +23,53 @@
     font-size: 16px;
     line-height: 20px;
   }
+
+  svg {
+    font: 10px sans-serif;
+  }
+  
+  .background path {
+    fill: none;
+    stroke: #ccc;
+    stroke-opacity: .4;
+    shape-rendering: crispEdges;
+  }
+  
+  .foreground path {
+    fill: none;
+    stroke: steelblue;
+    stroke-opacity: .7;
+  }
+  
+  .brush .extent {
+    fill-opacity: .3;
+    stroke: #fff;
+    shape-rendering: crispEdges;
+  }
+  
+  .axis line, .axis path {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
+  
+  .axis text {
+    text-shadow: 0 1px 0 #fff;
+    cursor: move;
+  }
+  .container {
+    float: left;
+    width: 300px;
+    height:300px;
+  }
+
+  path.slice{
+    stroke-width:2px;
+  }
+  
+  polyline{
+    opacity: .3;
+    stroke: black;
+    stroke-width: 2px;
+    fill: none;
+  }
