--- a/Styles.css
+++ b/Styles.css
@@ -1,3 +1,30 @@
+#tooltip {
+    position: absolute;
+    width: 200px;
+    height: auto;
+    padding: 10px;
+    background-color: rgb(121, 203, 241);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    pointer-events: none;
+  }
+  
+  #tooltip.hidden {
+    display: none;
+  }
+  
+  #tooltip p {
+    margin: 2;
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+
 div.menu {
     width: 100%;
     height: 40px;
@@ -17,6 +44,7 @@ svg {
   .foreground path {
     fill: none;
     stroke: steelblue;
+    stroke-opacity: .7;
   }
   
   .brush .extent {
