--- a/Styles.css
+++ b/Styles.css
@@ -53,15 +53,29 @@ svg {
     shape-rendering: crispEdges;
   }
   
-  .axis line,
-  .axis path {
+  .axis line,.axis path {
     fill: none;
     stroke: #000;
     shape-rendering: crispEdges;
   }
   
   .axis text {
-    text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+    text-shadow: 0 1px 0 #fff;
     cursor: move;
   }
+    .container {
+    float: left;
+    width: 300px;
+    height:300px;
+  }
+
+  path.slice{
+    stroke-width:2px;
+  }
   
+  polyline{
+    opacity: .3;
+    stroke: black;
+    stroke-width: 2px;
+    fill: none;
+  }
