--- a/Styles.css
+++ b/Styles.css
@@ -1,4 +1,114 @@
-#tooltip {
+div.full-page {
+    width: 100%;
+    border: 1px solid black;
+  }
+  .head  {
+    width: 98%;
+    height: 50px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      padding-top: 15px;
+      padding-left: 13px;
+      padding-right: 13px;
+        
+     font-size: 32px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 1.5em;
+    padding-bottom: 15px;
+    position: relative;
+     
+  }
+
+  div.main {
+    width: 100%;
+    
+    height: 830px;
+    padding-top: 5px;
+   
+   
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  div.foot {
+    width: 100%;
+    height: 460px;
+    padding-top: 20px;
+  
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    
+  
+  }
+  div.menu {
+    width: 100%;
+    height: 40px;
+     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  .menu {
+    background-color: #0c2c84;
+    overflow: hidden;
+  }
+  
+  .menu a {
+    float: left;
+    color: #c7e9b4;
+    text-align: center;
+    padding: 10px 46px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .head a:hover {
+    background-color: #ddd;
+    color: #0c2c84;
+  }
+  div.donutDiv{
+    float: left;
+    width: 45%;    
+    height: 300px;
+    padding-left: 25px; 
+    padding-top: 15px; 
+  }
+  div.pieDiv{
+    float: left;
+    width: 45%;    
+    height: 400px;
+    padding-left: 25px; 
+    padding-top: 15px; 
+  }
+  div.barchart{
+    float: left;
+    width: 45%;    
+    height: 400px;
+    padding-left: 25px; 
+    padding-top: 15px; 
+  }
+  div.barchartRD{
+    float: left;
+    width: 45%;    
+    height: 400px;
+    padding-left: 25px; 
+    padding-top: 15px; 
+  }
+  div.barchart_allDisease{
+    float: left;
+    width: 45%;    
+    height: 350px;
+    padding-left: 25px; 
+    padding-top: 15px; 
+  }
+  div.BMIhistogram{
+    float: left;
+    width: 45%;    
+    height: 400px;
+    padding-left: 25px; 
+    padding-top: 15px; 
+  }
+  div.groupedbarchart{
+    float: left;
+    width: 45%;    
+    height: 500px;
+    padding-left: 25px; 
+    padding-top: 15px; 
+  }
+  #tooltip {
     position: absolute;
     width: 200px;
     height: auto;
@@ -23,8 +133,8 @@
     font-size: 16px;
     line-height: 20px;
   }
-
-  svg {
+ 
+svg {
     font: 10px sans-serif;
   }
   
@@ -47,7 +157,7 @@
     shape-rendering: crispEdges;
   }
   
-  .axis line, .axis path {
+  .axis line,.axis path {
     fill: none;
     stroke: #000;
     shape-rendering: crispEdges;
@@ -57,7 +167,7 @@
     text-shadow: 0 1px 0 #fff;
     cursor: move;
   }
-  .container {
+    .container {
     float: left;
     width: 300px;
     height:300px;
